--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-coming soon<br><br>vägarbete™
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>vägarbete</title>
+	</head>
+	<body>
+		<p>coming soon</p>
+		<br><br>
+		<p>vägarbete™</p><br><br><br><br>
+		<p style="color:white">8/27/2022 12:00 AM CEST</p>
+	</body>
+</html>
