--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 		<title>vägarbete</title>
 	</head>
 	<body>
-		<p>coming soon</p>
-		<br><br>
-		<p>vägarbete™</p><br><br><br><br>
-		<p style="color:white">8/27/2022 12:00 AM CEST</p>
+		<h1>vägarbete™</h1>
+		<p>(click the images)</p>
+		<a href="3dmodel.html"><img border="0" alt="3d modeling" src="images/monkey.png" width="200" height="200"></a>
 	</body>
 </html>
