--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
 	</head>
 	<body>
 		<h1>vägarbete™</h1>
-		<p>(click the images)</p>
+		<br>
+		(click the images)
+		<button type="button" onclick="darkmode()">dark mode</button>
+		<br>
 		<a href="3dmodel.html"><img border="0" alt="3d modeling" src="images/monkey.png" width="200" height="200"></a>
+		<script>
+			function darkmode(){
+				document.body.style.backgroundColor = "black"
+				document.body.style.color = "white"
+			}
+		</script>
 	</body>
 </html>
